--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="img-no-display"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Hello! Welcome to Synology Web Station!</title>
+<title>Fight for freedom</title>
 <style>
 html {
     height: 100%;
@@ -46,7 +46,8 @@ div#container {
 <div id="outer">
 <div id="container">
 <img src="web_images/icon.png" />
-<p id="paragraph">Web Station has been enabled. To finish setting up your website, please see the "Web Service" section of DSM Help.</p>
+<p id="paragraph">光復香港 - 時代革命</p>
+<a href="data.xls">Download Data</a>
 </div>
 </div>
 
