--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ div#container {
 #paragraph {
 	padding: 20px 0 30px 40px;
 	margin: 0 auto;
-	text-align: left;
+	text-align: center;
 	width: 560px;
 	color: #146b9d;
 	font-size: 11pt;
