--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="img-no-display"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Fight for freedom</title>
+<title>光復香港 - 時代革命</title>
 <style>
 html {
     height: 100%;
@@ -29,7 +29,7 @@ div#container {
 #paragraph {
 	padding: 20px 0 30px 40px;
 	margin: 0 auto;
-	text-align: center;
+	text-align: left;
 	width: 560px;
 	color: #146b9d;
 	font-size: 11pt;
@@ -46,8 +46,7 @@ div#container {
 <div id="outer">
 <div id="container">
 <img src="web_images/icon.png" />
-<p id="paragraph">光復香港 - 時代革命</p>
-<a href="data.xls">Download Data</a>
+<p id="paragraph"><a href="data.xls">Download Data</a></p>
 </div>
 </div>
 
