--- a/calculator.html
+++ b/calculator.html
@@ -30,7 +30,7 @@ body {
 <script type="text/javascript">
 function calculate() {
 	var HKID = document.getElementById("HKID").value;
-	var GC = document.getElementById("selGC").value;
+	var GC = document.getElementById("seGC").value;
 
 	var seat = 0;
 
@@ -78,7 +78,7 @@ function validate(HKID) {
 <form id="form1">
 <table>
 <tr><td><p class="main">選區<br/>Geographical Constituency</p></td>
-<td><select id="selGC">
+<td><select id="seGC">
 <option value="HKI">香港島 Hong Kong Island</option>
 <option value="KLW">九龍西 Kowloon West</option>
 <option value="KLE">九龍東 Kowloon East</option>
