--- a/introduction.html
+++ b/introduction.html
@@ -46,7 +46,7 @@ div#container {
 <div id="outer">
 <div id="container">
 <img src="web_images/icon.png" />
-<p id="paragraph">Web Station has been enabled. To finish setting up your website, please see the "Web Service" section of DSM Help.</p>
+<p id="paragraph"><div w3-include-html="content.txt"></div></p>
 </div>
 </div>
 
