--- a/introduction.html
+++ b/introduction.html
@@ -46,7 +46,7 @@ div#container {
 <div id="outer">
 <div id="container">
 <img src="web_images/icon.png" />
-<p id="paragraph"><div w3-include-html="content.txt"></div></p>
+<p id="paragraph"><include src="content.txt"></include></p>
 </div>
 </div>
 
