--- a/intro.html
+++ b/intro.html
@@ -49,7 +49,7 @@ div#container {
 <p class="paragraph">
 2020區選報捷大快人心，但立法會選舉是多議席單票制，沒有良好的配票方案，隨時贏總票數卻輸議席。像2016年朱凱迪吸票8萬幾只係赢一席，但何君堯3萬幾票又係贏一席，如果得票可以平均一點，少一點票落在𠝹黨上，便可多送一名同路人入議會。
 不要妄想一張名單取得超過一席，在比例代表制下，要先全取一席的票數，再用餘數决勝，比起每張名單不用全取一席的門檻，只需得票較高便取勝，絕不化算，萬一餘數不足，更白白浪費許多選票。
-[<a href src="https://www.legco.gov.hk/yr97-98/chinese/sec/library/cin1_plc.pdf">1</a>]
+[<a href="https://www.legco.gov.hk/yr97-98/chinese/sec/library/cin1_plc.pdf">1</a>]
 <br/><br/>
 總括來說，最佳策略是把選票平均分配，務求令每張有勝算的名單的首名候選人當選。建制派的配票系統多年來行之有效，牠們靠滲透每個老人院、公會、同鄉會等各地區組織，在立法會選舉前提供不同的投票建議，便能有效分配近百萬的鐵票，讓建制能以最少票數取得最多議席。
 2016年戴教授提出的雷動計畫原意不錯，用實時民調作投票建議，成效卻沒預期的好。 
@@ -61,7 +61,7 @@ div#container {
 2. 民調變化大，使選民接收到的投票建議跟不上實時民調。
 <br/><br/>
 這個配票計劃不像雷動用在投票時才提供投票建議，它在投票前預先配票，選民只要輸入六位數字身份證號碼，系統便會用數學方法計算投票建議，由於身份證號碼只用作運算，系統並不儲存資料，所以不用擔心安全問題。
-由於種種政治因素，全黄陣營的跨黨派初選似乎是不可能，退而求其次，我以選舉前一星期的民調作配票基礎，以數學方法盡量把選票平均分給每一區中，民調最高的幾位侯選人。 <a href src="method.html">按此了解更多</a>
+由於種種政治因素，全黄陣營的跨黨派初選似乎是不可能，退而求其次，我以選舉前一星期的民調作配票基礎，以數學方法盡量把選票平均分給每一區中，民調最高的幾位侯選人。 <a href="method.html">按此了解更多</a>
 <br/><br/>
 詳細配票策略如下:
 
