--- a/method.html
+++ b/method.html
@@ -2,14 +2,14 @@
 <html class="img-no-display"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>立法會選舉配票攻略</title>
+<title>配票方法</title>
 <style>
 html {
     height: 100%;
     overflow: hidden;  
 }
 body {
-    background: url(web_images/back.jpg) no-repeat center center fixed;
+    background: lightyellow;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -21,21 +21,46 @@ div#outer {
     height: 100%;
     width: 100%;
 }
+div#pane {
+	display: table-cell;
+    text-align: left;
+    vertical-align: top;
+	width: 100%;
+}
 div#container {
 	display: table-cell;
     text-align: center;
-    vertical-align: middle;
+    vertical-align: top;	
 }
 .paragraph {
 	padding: 20px 20px 20px 20px;
 	margin: 0 auto;
 	text-align: left;
 	width: 560px;
-	color: #6F6F6F;
+	color: black;
 	font-size: 11pt;
 	font-weight: bold;
 	font-family: Verdana;
-	background-color:lightblue;
+	background-color:lightyellow;
+}
+.button {
+	background-color: #FF8000; 
+	color: white; 
+	padding: 10px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+	border: 2px solid #FF8000;
+	border-radius: 12px;
+	transition-duration: 0.4s;
+}
+
+.button:hover {
+	background-color: white;
+	color: #FF8000;
 }
 </style>
 <link href="../help.css" type="text/css" rel="stylesheet" />
@@ -44,26 +69,23 @@ div#container {
 <script type="text/javascript" src="../scrollbar/initFlexcroll.js"></script>
 </head>
 <body>
+
 <div id="outer">
 <div id="container">
+<div id="pane">
+<a href="index.html" class="button">前言</a>
+<a href="calculator.html" class="button">配票計算機</a>
+</div>
+
+<h1>配票方法</h1>
 <p class="paragraph">
-2020區選報捷大快人心，但立法會選舉是多議席單票制，沒有良好的配票方案，隨時贏總票數卻輸議席。像2016年朱凱迪吸票8萬幾只係赢一席，但何君堯3萬幾票又係贏一席，如果得票可以平均一點，少一點票落在𠝹黨上，便可多送一名同路人入議會。
-不要妄想一張名單取得超過一席，在比例代表制下，要先全取一席的票數，再用餘數决勝，比起每張名單不用全取一席的門檻，只需得票較高便取勝，絕不化算，萬一餘數不足，更白白浪費許多選票。
-[<a href src="https://www.legco.gov.hk/yr97-98/chinese/sec/library/cin1_plc.pdf">1</a>]
-<br/><br/>
-總括來說，最佳策略是把選票平均分配，務求令每張有勝算的名單的首名候選人當選。建制派的配票系統多年來行之有效，牠們靠滲透每個老人院、公會、同鄉會等各地區組織，在立法會選舉前提供不同的投票建議，便能有效分配近百萬的鐵票，讓建制能以最少票數取得最多議席。
-2016年戴教授提出的雷動計畫原意不錯，用實時民調作投票建議，成效卻沒預期的好。 
-<br/><br/>
-我認為:
+1. 用身分證號碼的數字部分，除以要搶的議席數後，找出餘數。
 <br/>
-1. 實時民調未必準確。
+2. 用餘數找出對應的候選人名單。
 <br/>
-2. 民調變化大，使選民接收到的投票建議跟不上實時民調。
-<br/><br/>
-這個配票計劃不像雷動用在投票時才提供投票建議，它在投票前預先配票，選民只要輸入六位數字身份證號碼，系統便會用數學方法計算投票建議，由於身份證號碼只用作運算，系統並不儲存資料，所以不用擔心安全問題。
-由於種種政治因素，全黄陣營的跨黨派初選似乎是不可能，退而求其次，我以選舉前一星期的民調作配票基礎，以數學方法盡量把選票平均分給每一區中，民調最高的幾位侯選人。 
-詳細配票策略如下:
-光復香港，時代革命
+例如:
+<br/>
+新東9席要搶6席，你的身份證號碼是: A987654()
 </p>
 </div>
 </div>
