--- a/calculator.html
+++ b/calculator.html
@@ -108,57 +108,57 @@ function getGCCandidate(GC, result) {
 		if (result == 1) {
 			return "<img src='HKI/1.png' />";
 		} else if (result == 2) {
-			return "<img src='HKI/1.png' />";
+			return "<img src='HKI/2.png' />";
 		} else if (result == 3) {		
-			return "<img src='HKI/1.png' />";
+			return "<img src='HKI/3.png' />";
 		} else if (result == 0) {
-			return "<img src='HKI/1.png' />";
+			return "<img src='HKI/4.png' />";
 		} 
 	} else if (GC == "KLW") {
 		if (result == 1) {
 			return "<img src='KLW/1.png' />";
 		} else if (result == 2) {
-			return "<img src='KLW/1.png' />";
+			return "<img src='KLW/2.png' />";
 		} else if (result == 3) {		
-			return "<img src='KLW/1.png' />";
+			return "<img src='KLW/3.png' />";
 		} else if (result == 0) {
-			return "<img src='KLW/1.png' />";
+			return "<img src='KLW/4.png' />";
 		} 
 	} else if (GC == "KLE") {
 		if (result == 1) {
 			return "<img src='KLE/1.png' />";
 		} else if (result == 2) {
-			return "<img src='KLE/1.png' />";
+			return "<img src='KLE/2.png' />";
 		} else if (result == 0) {
-			return "<img src='KLE/1.png' />";
+			return "<img src='KLE/3.png' />";
 		} 
 	} else if (GC == "NTW") {
 		if (result == 1) {
 			return "<img src='NTW/1.png' />";
 		} else if (result == 2) {
-			return "<img src='NTW/1.png' />";
+			return "<img src='NTW/2.png' />";
 		} else if (result == 3) {		
-			return "<img src='NTW/1.png' />";
+			return "<img src='NTW/3.png' />";
 		} else if (result == 4) {		
-			return "<img src='NTW/1.png' />";
+			return "<img src='NTW/4.png' />";
 		} else if (result == 5) {		
-			return "<img src='NTW/1.png' />";	
+			return "<img src='NTW/5.png' />";	
 		} else if (result == 0) {
-			return "<img src='NTW/1.png' />";
+			return "<img src='NTW/6.png' />";
 		} 
 	} else if (GC == "NTE") {
 		if (result == 1) {
 			return "<img src='NTE/1.png' />";
 		} else if (result == 2) {
-			return "<img src='NTE/1.png' />";
+			return "<img src='NTE/2.png' />";
 		} else if (result == 3) {		
-			return "<img src='NTE/1.png' />";
+			return "<img src='NTE/3.png' />";
 		} else if (result == 4) {		
-			return "<img src='NTE/1.png' />";
+			return "<img src='NTE/4.png' />";
 		} else if (result == 5) {		
-			return "<img src='NTE/1.png' />";	
+			return "<img src='NTE/5.png' />";	
 		} else if (result == 0) {
-			return "<img src='NTE/1.png' />";
+			return "<img src='NTE/6.png' />";
 		} 
 	}
 	
@@ -196,7 +196,7 @@ function validate(HKID) {
 </script>
 </head>
 <body>
-<a href="index.html" class="button">前言</a>
+<a href="intro.html" class="button">前言</a>
 <br/>
 <div id="result"></div>
 <form id="form1" onsubmit="return calculate();">
