--- a/intro.html
+++ b/intro.html
@@ -72,6 +72,31 @@ div#pane {
 h1 {
 	color: white;
 }
+
+h2 {
+	padding: 20px 20px 20px 20px;
+	margin: 0 auto;
+	text-align: left;
+	width: 560px;
+	color: #000000;
+	font-weight: bold;
+	font-family: Verdana;
+	background-color:lightyellow;
+}
+
+table {
+	border-collapse: collapse;
+	border: 1px solid black;
+	margin: 20px 20px 20px 20px;
+	text-align: left;
+	align: center;
+	width: 560px;
+	color: #000000;
+	font-size: 11pt;
+	font-weight: bold;
+	font-family: Verdana;
+	background-color:lightyellow;
+}
 </style>
 <link href="../help.css" type="text/css" rel="stylesheet" />
 <link href="../scrollbar/flexcroll.css" type="text/css" rel="stylesheet" />
@@ -95,17 +120,33 @@ h1 {
 <br/><br/>
 我認為:
 <br/>
-1. 實時民調未必準確。無論是哪個陣營，民調時大家都興fake人。
+1. 實時民調未必準確。無論是哪個陣營，民調時大家都會fake人。
 <br/>
 2. 民調變化大，使選民接收到的投票建議跟不上實時民調。尤其是大家都想做策略性選民，個個等旁晚邊個告急先去投票，以致臨尾出現誤差，未必能有效助取末席。
 <br/><br/>
 這個配票計劃不像雷動用在投票時才提供投票建議，它在投票前預先配票，選民只要輸入六位數字身份證號碼，系統便會用數學方法計算投票建議，由於身份證號碼只用作運算，系統並不儲存資料，所以不用擔心安全問題。
-由於種種政治因素，全黄陣營的跨黨派初選似乎是不可能，退而求其次，我以選舉前一星期的民調作配票基礎，以數學方法盡量把選票平均分給每一區中，民調最高的幾位侯選人。 <a href="method.html">按此了解更多</a>
+由於種種政治因素，全黄陣營的跨黨派初選似乎是不可能，退而求其次，我以選舉前一星期的民調作配票基礎，以數學方法盡量把選票平均分給每一區中，民調最高的幾位侯選人。
 <br/><br/>
-詳細配票策略如下:
-
+配票方法:
+<br/>
+1. 用身分證號碼的數字部分，除以要搶的議席數後，找出餘數。
+<br/>
+2. 用餘數找出對應的候選人名單。
+<br/>
+例如: 新東9席要搶6席，假設你的身份證號碼是: D689777(1)，689777/6 = 114962餘5
+<br/>
+1 - (6)伏香江 (初選／民調第一)<br/>
+2 - (1)時革命 (初選／民調第二)<br/>
+3 - (2)連小豬 (初選／民調第三)<br/>
+4 - (7)連小狗 (初選／民調第四)<br/>
+5 - (8)連小蛙 (初選／民調第五)<br/>
+0 - (3)黃到金 (初選／民調第六)<br/>
+系統會建議你投(8)連小蛙
 <br/><br/>
-
+配票策略:
+~~~寫緊~~~
+</p>
+<p class="paragraph">
 </p>
 <h1>光復香港 時代革命</h1>
 </div>
