--- a/calculator.html
+++ b/calculator.html
@@ -6,7 +6,7 @@
 <style>
 html {
     height: 100%;
-    overflow: hidden;  
+    overflow: auto;  
 }
 body {
     background: FFFFFF;
@@ -22,8 +22,7 @@ body {
 	margin: 0 auto;
 	text-align: left;
 	color: #000000;
-	font-size: 11pt;
-	font-weight: bold;
+	font-size: 12pt;
 	font-family: Verdana;
 }
 
