--- a/intro.html
+++ b/intro.html
@@ -6,7 +6,7 @@
 <style>
 html {
     height: 100%;
-    overflow: hidden;  
+    overflow: auto;  
 }
 body {
     background: url(web_images/back.jpg) no-repeat center center fixed;
@@ -43,8 +43,7 @@ div#pane {
 	text-align: left;
 	width: 560px;
 	color: #000000;
-	font-size: 11pt;
-	font-weight: bold;
+	font-size: 12pt;
 	font-family: Verdana;
 	background-color:lightyellow;
 }
