--- a/calculator.html
+++ b/calculator.html
@@ -41,6 +41,14 @@ body {
 	transition-duration: 0.4s;
 }
 
+select {
+	font-size: 16px;
+}
+
+input {
+	font-size: 16px;
+}
+
 .button:hover {
 	background-color: white;
 	color: black;
