--- a/calculator.html
+++ b/calculator.html
@@ -33,7 +33,7 @@ body {
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 16px;
+	font-size: 15px;
 	margin: 4px 2px;
 	cursor: pointer;
 	border: 2px solid;
@@ -42,11 +42,13 @@ body {
 }
 
 select {
-	font-size: 16px;
+	font-size: 15px;
 }
 
-input {
-	font-size: 16px;
+input[type=text] {
+	font-size: 15px;
+	border: 2px solid black;
+	border-radius: 4px;
 }
 
 .button:hover {
