--- a/calculator.html
+++ b/calculator.html
@@ -22,7 +22,7 @@ body {
 	margin: 0 auto;
 	text-align: left;
 	color: #000000;
-	font-size: 40pt;
+	font-size: 16pt;
 	font-family: Verdana;
 }
 
@@ -33,7 +33,7 @@ body {
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 15px;
+	font-size: 16px;
 	margin: 4px 2px;
 	cursor: pointer;
 	border: 2px solid;
@@ -42,13 +42,14 @@ body {
 }
 
 select {
-	font-size: 15px;
+	font-size: 16px;
 }
 
-input[type=text] {
-	font-size: 15px;
+input#HKID {
+	font-size: 16px;
 	border: 2px solid black;
-	border-radius: 4px;
+	height: 50px;
+	width: 300px;
 }
 
 .button:hover {
