--- a/intro.html
+++ b/intro.html
@@ -43,7 +43,7 @@ div#pane {
 	text-align: left;
 	width: 560px;
 	color: #000000;
-	font-size: 14pt;
+	font-size: 16pt;
 	font-family: Verdana;
 	background-color:lightyellow;
 }
@@ -99,7 +99,7 @@ h2 {
 <p class="paragraph">
 2020區選報捷大快人心，但立法會選舉是多議席單票制，沒有良好的配票方案，隨時贏總票數卻輸議席。像2016年朱凱迪吸票8萬幾只係赢一席，但何君堯3萬幾票又係贏一席，如果得票可以平均一點，少一點票落在𠝹黨上，便可多送一名同路人入議會。
 不要妄想一張名單取得超過一席，在比例代表制下，要先全取一席的票數，再用餘數决勝，比起每張名單不用全取一席的門檻，只需得票較高便取勝，絕不化算，萬一餘數不足，更白白浪費許多選票。
-[<a href="https://www.legco.gov.hk/yr97-98/chinese/sec/library/cin1_plc.pdf">1</a>]
+[<a href="https://www.legco.gov.hk/yr97-98/chinese/sec/library/cin1_plc.pdf">注</a>]
 <br/><br/>
 總括來說，最佳策略是把選票平均分配，務求令每張有勝算的名單的首名候選人當選。建制派的配票系統多年來行之有效，牠們靠滲透每個老人院、公會、同鄉會等各地區組織，在立法會選舉前提供不同的投票建議，便能有效分配近百萬的鐵票，讓建制能以最少票數取得最多議席。
 2016年戴教授提出的雷動計畫原意不錯，用實時民調作投票建議，成效卻沒預期的好。 
@@ -127,12 +127,18 @@ h2 {
 4 - (7)連小狗 (初選／民調第四)<br/>
 5 - (8)連小蛙 (初選／民調第五)<br/>
 0 - (3)黃到金 (初選／民調第六)<br/>
-系統會建議你投(8)連小蛙
+系統會建議你投(8)連小蛙，呢個方法雖不能保證100%平均，但越多人用結果就越平均，好像擲公字咁，玩得越多越接近50%理想的平均分佈。配票是一種篩選，有政治團體得益亦必有政治團體犧牲，配票方案要公平才多人參與，才有成效。最公平的方法就是初選，用民意決定配票方案，如最終都未能舉辦初選，唯有用投票日前一星期的民調做指標。
 <br/><br/>
-配票策略:
-~~~寫緊~~~
-</p>
-<p class="paragraph">
+詳細配票策略:
+<br/>
+<a href="HKI.html">香港島</a><br/>
+<a href="KLW.html">九龍西</a><br/>
+<a href="KLE.html">九龍東</a><br/>
+<a href="NTW.html">新界西</a><br/>
+<a href="NTE.html">新界東</a><br/>
+<a href="DC.html">區議會（第二）功能界別</a><br/>
+<br/>
+歡迎來函指教：<a href='mailto:bankcheck@hotmail.com'>bankcheck@hotmail.com</a>
 </p>
 <h1>光復香港 時代革命</h1>
 </div>
