--- a/intro.html
+++ b/intro.html
@@ -131,12 +131,12 @@ h2 {
 <br/><br/>
 詳細配票策略:
 <br/>
-<a href="HKI.html">香港島</a><br/>
-<a href="KLW.html">九龍西</a><br/>
-<a href="KLE.html">九龍東</a><br/>
-<a href="NTW.html">新界西</a><br/>
-<a href="NTE.html">新界東</a><br/>
-<a href="DC.html">區議會（第二）功能界別</a><br/>
+<a href="strategy-HKI.html">香港島</a><br/>
+<a href="strategy-KLW.html">九龍西</a><br/>
+<a href="strategy-KLE.html">九龍東</a><br/>
+<a href="strategy-NTW.html">新界西</a><br/>
+<a href="strategy-NTE.html">新界東</a><br/>
+<a href="strategy-DC.html">區議會（第二）功能界別</a><br/>
 <br/>
 歡迎來函指教：<a href='mailto:bankcheck@hotmail.com'>bankcheck@hotmail.com</a>
 </p>
