--- a/strategy-HKI.html
+++ b/strategy-HKI.html
@@ -2,7 +2,7 @@
 <html class="img-no-display"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>配票方法</title>
+<title>配票策略</title>
 <style>
 html {
     height: 100%;
@@ -73,19 +73,12 @@ div#container {
 <div id="outer">
 <div id="container">
 <div id="pane">
-<a href="index.html" class="button">前言</a>
+<a href="intro.html" class="button">前言</a>
 <a href="calculator.html" class="button">配票計算機</a>
 </div>
-
-<h1>配票方法</h1>
+<h1>香港島配票策略</h1>
 <p class="paragraph">
-1. 用身分證號碼的數字部分，除以要搶的議席數後，找出餘數。
-<br/>
-2. 用餘數找出對應的候選人名單。
-<br/>
-例如:
-<br/>
-新東9席要搶6席，你的身份證號碼是: A987654()
+
 </p>
 </div>
 </div>
