--- a/ex1.html
+++ b/ex1.html
@@ -37,6 +37,8 @@ $(document).ready(function(){
 });
 
 function next() {
+	$("#answer").val("");
+
 	var title = "Q" + $("#counter").val();
 	$("title").text(title);
 
