--- a/ex1.html
+++ b/ex1.html
@@ -85,7 +85,7 @@ function getAnswer() {
 </head>
 <body >
 <p id="display">HELLO</p>
-<input id="answer" type="number" size="2" maxlength="2" />
+<input id="answer" type="number" min="0" max="99" />
 <input id="cal" type="button" value="Go" />
 <input id="counter" type="hidden" />
 <input id="no1" type="hidden" />
