--- a/ex1.html
+++ b/ex1.html
@@ -56,7 +56,7 @@ function next() {
 
 	$("#sign").val(sign);
 
-	var question = $("#no1").val() + " " + $("#sign").val() + " " + $("#no2").val();
+	var question = title + ". " + $("#no1").val() + " " + $("#sign").val() + " " + $("#no2").val();
 	$("#display").html(question);
 }
 
