--- a/ex1.html
+++ b/ex1.html
@@ -41,7 +41,7 @@ $(document).ready(function(){
 		var answer = $("#answer").val().trim();
 
 		if (answer == getAnswer()) {
-			alert("Good Job! Next question");
+			//alert("Good Job! Next question");
 			cnt = next(cnt);
 		} else {
 			alert("Wrong, please try again");
