--- a/ex1.html
+++ b/ex1.html
@@ -111,7 +111,8 @@ function setMiniHead(start, no, wcnt) {
 	
 	var time = (end - start) / 60000;
 	var rate = no/time;
-	alert rate;
+	alert (rate);
+	alert (no);
 			
 	if (wcnt > 0)
 		$("#mini-head").text(timeLapse + "\t" + rate + "per min\twrong:" + wcnt);
