--- a/ex1.html
+++ b/ex1.html
@@ -36,6 +36,7 @@ $(document).ready(function(){
 	var start = new Date();
 	var cnt = next(1);
 	var wrong = 0;
+	alert(cnt);
 
 	$("#cal").click(function(){
 		var answer = $("#answer").val().trim();
