--- a/ex1.html
+++ b/ex1.html
@@ -119,7 +119,7 @@ function setMiniHead(start, no, wrong) {
 	else
 		$("#mini-head").text(timeLapse + ", " + rate.toFixed(2) + "per min");
 */  
-	$("#mini-head").text(timeLapse + ", " + rate.toFixed(2) + "/min, right:" + no + " wrong:" + wrong) + " pct:" + Math.round(no / (no + wrong) * 100) + "%";
+	$("#mini-head").text(timeLapse + ", " + rate.toFixed(2) + "/min, right:" + no + " wrong:" + wrong + " pct:" + Math.round(no / (no + wrong) * 100) + "%";
 }  
 
 </script>
