--- a/ex1.html
+++ b/ex1.html
@@ -114,7 +114,7 @@ function setMiniHead(start, no, wrong) {
 	var time = (end - start) / 60000;
 	var rate = no/time;
  
-	$("#mini-head").text(timeLapse + ", " + rate.toFixed(2) + "/min, right:" + no + " wrong:" + wrong + " pct:" + Math.round(no / (no + wrong) * 100) + "%");
+	$("#mini-head").text(timeLapse + ", " + rate.toFixed(2) + "/min, right:" + no + " wrong:" + wrong + ", pct:" + Math.round(no / (no + wrong) * 100) + "%");
 }  
 
 </script>
