--- a/ex3.html
+++ b/ex3.html
@@ -4,7 +4,7 @@
  <title>test</title>
 <style>
 body {
-  background-color: LightPurple;
+  background-color: Purple;
 }
 
 #mini-head {
@@ -80,7 +80,8 @@ function next(no) {
 }
 
 function getNum() {
-	return Math.floor(Math.random() * 10);
+	//return Math.floor(Math.random() * 10);
+	return Math.floor(Math.random() * 10) + 1;
 }
 
 function getSign() {
