--- a/ex3.html
+++ b/ex3.html
@@ -4,7 +4,7 @@
  <title>test</title>
 <style>
 body {
-  background-color: Purple;
+  background-color: LightPink;
 }
 
 #mini-head {
@@ -91,7 +91,7 @@ function getSign() {
 	else
 		return "-";
 */
-	return "x";
+	return "X";
 }
 
 function getAnswer() {
