--- a/ex3.html
+++ b/ex3.html
@@ -44,7 +44,7 @@ $(document).ready(function(){
 		var answer = $("#answer").val().trim();
 
 		if (answer == getAnswer()) {
-			alert("Good Job! Next question");
+			//alert("Good Job! Next question");
 			cnt = next(cnt);
 		} else {
 			alert("Wrong, please try again");
