--- a/ex3.html
+++ b/ex3.html
@@ -64,7 +64,7 @@ function next(no) {
 	$("title").text(title);	
 	$("#heading").text(title);
  
-	if (Number.isNan($("#no1").val()))
+	if (Number.isNaN($("#no1").val()))
 		$("#no1").val(getNum);
 
 	var no2 = getNum();
