--- a/ex3.html
+++ b/ex3.html
@@ -65,7 +65,7 @@ function next(no) {
 	$("#heading").text(title);
  
 	if (Number.isNaN($("#no1").val()))
-		$("#no1").val(getNum);
+		$("#no1").val(getNum());
 
 	var no2 = getNum();
 	$("#no2").val(no2);
