--- a/ex3.html
+++ b/ex3.html
@@ -65,7 +65,7 @@ function next(no) {
 	$("#heading").text(title);
  
 	var no1 = $("#no1").val();
-	if (isNaN(no1))
+	if (isNaN(no1) || no1 == "")
 		$("#no1").val(getNum());
 
 	var no2 = getNum();
