--- a/ex3.html
+++ b/ex3.html
@@ -34,7 +34,7 @@ input {
 
 $(document).ready(function(){
 	var no1 = prompt("Please enter a number");
-	$("#no1").val(no1);
+	$("#no1").val(no1.trim());
 	
 	var start = new Date();
 	var cnt = next(0);
