--- a/ex4.html
+++ b/ex4.html
@@ -86,7 +86,7 @@ function next(no) {
 }
 
 function getNum() {
-	return Math.floor(Math.random() * 10);
+	return Math.floor(Math.random() * 10) + 1;
 }
 
 function getSign() {
